@@ -3,6 +3,7 @@ package com.scalar.db.io;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import org.junit.Test;
 
 /** */
@@ -131,6 +132,7 @@ public class BooleanValueTest {
     BooleanValue value = new BooleanValue(ANY_NAME, some);
 
     // Act
+    @SuppressWarnings("SelfEquals")
     boolean result = value.equals(value);
 
     // Assert
@@ -153,13 +155,15 @@ public class BooleanValueTest {
   }
 
   @Test
+  @SuppressFBWarnings("EC_UNRELATED_TYPES")
   public void equals_DifferentTypesSameValuesGiven_ShouldReturnFalse() {
     // Arrange
     boolean some = Boolean.TRUE;
     BooleanValue one = new BooleanValue(ANY_NAME, some);
-    Boolean another = new Boolean(some);
+    Boolean another = Boolean.valueOf(some);
 
     // Act
+    @SuppressWarnings("EqualsIncompatibleType")
     boolean result = one.equals(another);
 
     // Assert
